# withoutbg-inference

./: .dockerignore  .gitignore  LICENSE  README.md  THIRD_PARTY_NOTICES.md  docker-bake.hcl  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  withoutbg-openweights.onnx.json
.github/workflows/: docker-publish.yml  dockerhub-description.yml
docker/: Dockerfile.app-cpu  Dockerfile.app-gpu  Dockerfile.base-cpu  Dockerfile.base-gpu  Dockerfile.dev  Dockerfile.model-assets  Dockerfile.service-cpu  Dockerfile.service-gpu
docker/hub/: app-cpu.md  app-gpu.md  service-cpu.md  service-gpu.md
docker/nginx/: default.conf
docker/scripts/: download-model.sh  download_model.py  prepare-gpu-model.py  start-app.sh  start-service.sh
model/withoutbg_openweights/: __init__.py  config.py  onnx_cuda.py  postprocess.py  preprocess.py  runtime.py
model/withoutbg_openweights/artifacts/: withoutbg-open-weights.onnx.json
scripts/: dev-api.sh  dev-download-model.sh
service/withoutbg_api/: __init__.py  licenses_data.py  main.py  schemas.py
service/withoutbg_api/routes/: health.py  inference.py  licenses.py
ui/: README.md  next.config.ts  package-lock.json  package.json  tailwind.config.ts
ui/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
ui/src/app/licenses/: page.tsx
ui/src/components/conversion/: StarModal.tsx  (+1 more)
ui/src/hooks/: useMockProcessor.ts  usePasteShortcut.ts  useProcessingQueue.ts
ui/src/lib/: api-processor.ts  mock-alpha.ts  platform.ts  processor.ts  product-links.ts  reference-links.ts  shell-styles.ts  star-prompt.ts  theme-colors.ts
(+15 files in other folders)
